--- a/.tekton/rhobs-opa-ams-pull-request.yaml
+++ b/.tekton/rhobs-opa-ams-pull-request.yaml
@@ -27,7 +27,9 @@ spec:
   - name: image-expires-after
     value: 5d
   - name: dockerfile
-    value: Dockerfile
+    value: Containerfile.operator
+  - name: build-source-image
+    value: "true"
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
