--- a/.tekton/rhobs-opa-ams-push.yaml
+++ b/.tekton/rhobs-opa-ams-push.yaml
@@ -24,7 +24,9 @@ spec:
   - name: output-image
     value: quay.io/redhat-user-workloads/rhobs-mco-tenant/rhobs-opa-ams:{{revision}}
   - name: dockerfile
-    value: Dockerfile
+    value: Containerfile.operator
+  - name: build-source-image
+    value: "true"
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
